# abmac-lib

./: Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: build.yml  coverage.yml  review.yml  validate.yml
abmac-macros/: Cargo.toml
abmac-macros/src/: checkpoint.rs  lib.rs
abmac-macros/src/bytes/: from_bytes.rs  mod.rs  to_bytes.rs
abmac-macros/src/tests/: bytecast.rs  mod.rs  pebble.rs
abmac-macros/tests/: bytecast.rs  pebble.rs
benches/: chaining.rs  comparison.rs  latency.rs  mpsc.rs  spsc.rs  throughput.rs
bytecast/: Cargo.toml  README.md
bytecast-macros/: Cargo.toml
bytecast-macros-impl/: Cargo.toml
bytecast-macros-impl/src/: lib.rs
bytecast-macros-impl/src/bytes/: from_bytes.rs
bytecast-macros/src/: lib.rs
bytecast-macros/src/bytes/: from_bytes.rs  mod.rs  to_bytes.rs
bytecast-macros/tests/: derive.rs
bytecast/examples/: custom_struct.rs
bytecast/src/: error.rs  impls.rs  lib.rs  serializer.rs  tests.rs  traits.rs
bytecast/src/bridges/: serde.rs
bytecast/src/impls/: alloc.rs  mod.rs  std_impls.rs  tuple.rs  wrapper.rs
bytecast/src/tests/: alloc.rs  mod.rs  std_collections.rs
examples/: mpsc.rs  mpsc_zero_contention.rs
pebble/: Cargo.toml  README.md
pebble-macros/: Cargo.toml
pebble-macros/src/: checkpoint.rs  lib.rs
pebble/examples/: basic.rs  files.rs  pebble_branching.rs  pebble_computation.rs  pebble_rebuild.rs
pebble/examples/common/: mod.rs
pebble/src/: game.rs  lib.rs  strategy.rs  verdict_support.rs
pebble/src/dag/: critical_paths.rs  eviction.rs  mod.rs  validation.rs
pebble/src/errors/: branch.rs  cold.rs  dag.rs  game.rs  manager.rs  mod.rs  storage.rs
pebble/src/manager/: branch.rs  branching.rs  builder.rs  error.rs  eviction.rs  manifest.rs  mod.rs  pebble_manager.rs  rebuild.rs  recovery.rs  safety.rs  serializers.rs  stats.rs  traits.rs  verify.rs
pebble/src/manager/cold/: direct.rs  mod.rs  parallel.rs  ring.rs
pebble/src/manager/warm/: cache.rs  mod.rs  none.rs
pebble/src/storage/: debug.rs  memory.rs  mod.rs
pebble/src/tests/: branch.rs  dag.rs  fixtures.rs  game.rs  manager.rs  mod.rs  safety.rs  storage.rs  strategy.rs
pebble/src/tests/manager/: basic.rs  builder.rs  cold_buffer.rs  compact.rs  dirty.rs  mod.rs  parallel.rs  rebuild.rs  recovery.rs  resize.rs  theory.rs  tombstone.rs
spill-ring/: Cargo.toml  README.md  feat.md  tpc.md
spill-ring-core/: Cargo.toml
spill-ring-core/src/: lib.rs  mpsc.rs  pool.rs  ring.rs  sink.rs  tests.rs
spill-ring-core/src/bytes/: impls.rs  mod.rs  serializer.rs  tests.rs
spill-ring-macros/: Cargo.toml
spill-ring/benches/: chaining.rs  mpsc.rs  single_thread.rs  spsc.rs  throughput.rs
spill-ring/examples/: backpressure.rs  fan_in.rs  mergers.rs  mpsc.rs  mpsc_zero_contention.rs  pipeline.rs  sequenced.rs  spill_ring.rs  spsc.rs  worker_pool.rs
spill-ring/src/: builder.rs  index.rs  iter.rs  lib.rs  mpsc.rs  pool.rs  read.rs  ring.rs  spsc.rs  traits.rs
spill-ring/src/mpsc/: barrier.rs  collector.rs  consumer.rs  fan_in.rs  handoff.rs  merger.rs  mod.rs  pool.rs  producer.rs
spill-ring/src/mpsc/tpc/: fan_in.rs  handoff.rs  merger.rs  mod.rs  streaming.rs  sync.rs
spill-ring/src/mpsc/tpc/pool/: collection.rs  helper.rs  mod.rs
spill-ring/src/tests/: concurrency.rs  mod.rs  mpsc.rs  ring.rs  ring_chaining.rs  spout.rs  traits.rs
spill-ring/src/tests/mpsc/: basic.rs  mod.rs
spill-ring/src/tests/mpsc/tpc/: mod.rs  pool.rs  streaming.rs
spout/: Cargo.toml  README.md  TODO.md
spout/src/: lib.rs  traits.rs
spout/src/impls/: bytecast_impls.rs  core_impls.rs  mod.rs  sequenced.rs  std_impls.rs
spout/src/tests/: bytecast_spouts.rs  mod.rs  producer_sink.rs  sequenced.rs  std_spouts.rs
src/: lib.rs
verdict/: Cargo.toml  README.md
verdict/src/: lib.rs  status.rs
verdict/src/heap/: context.rs  ext.rs  log_record.rs  retry.rs  sinks.rs
verdict/src/macros/: display_error.rs  mod.rs
verdict/src/tests/: alloc.rs
