[workspace]
resolver = "3"
members = ["abmac-macros", "bytecast", "bytecast-macros", "bytecast-macros-impl", "pebble-macros", "spout", "spill-ring", "verdict", "pebble"]

[workspace.package]

[workspace.dependencies]
spout = { path = "./spout" }
bytecast = { path = "./bytecast" }
bytecast-macros = { path = "./bytecast-macros" }
pebble-macros = { path = "./pebble-macros" }
