[package]
name = "abmac-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "ABMAC derive macros: ToBytes, FromBytes, Checkpoint"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
bytecast = { path = "../bytecast", features = ["derive", "alloc"] }
pebble = { path = "../pebble", features = ["derive"] }
hashbrown = "0.15"

[features]
default = []
bytecast = []
pebble = []
