[package]
name = "bytecast-macros-impl"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Internal implementation for bytecast derive macros"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
