[package]
name = "bytecast-macros"
version = "1.0.0-rc.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Derive macros (ToBytes, FromBytes) for spill-ring serialization"
repository = "https://github.com/abmac-io/spill/bytecast-macros"
keywords = ["bytes", "serialization", "zero-copy", "no_std", "pod"]
categories = ["encoding", "no-std"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
