[package]
name = "bytecast-macros"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Derive macros (ToBytes, FromBytes) for bytecast serialization"
repository = "https://github.com/abmac-io/abmac-lib"
documentation = "https://docs.rs/bytecast-macros"
keywords = ["bytes", "serialization", "zero-copy", "no_std", "derive"]
categories = ["encoding", "no-std"]

[lib]
proc-macro = true

[dependencies]
bytecast-macros-impl = { path = "../bytecast-macros-impl" }
syn = { version = "2.0", features = ["full", "parsing"] }

[dev-dependencies]
bytecast = { path = "../bytecast", features = ["derive"] }
