[package]
name = "bytecast-macros"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros (ToBytes, FromBytes) for bytecast serialization"
documentation = "https://docs.rs/bytecast-macros"
keywords = ["bytes", "serialization", "zero-copy", "no_std", "derive"]
categories = ["encoding", "no-std"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
bytecast = { path = "../bytecast", features = ["derive"] }
