[package]
name = "bytecast"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Fast, simple byte serialization for Rust. no_std compatible with little-endian wire format."
repository = "https://github.com/abmac-io/abmac-lib"
documentation = "https://docs.rs/bytecast"
readme = "README.md"
keywords = ["bytes", "serialization", "little-endian", "no_std", "embedded"]
categories = ["encoding", "no-std", "embedded"]

[dependencies]
abmac-macros = { path = "../abmac-macros", default-features = false, features = ["bytecast"], optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }
facet = { version = "0.43", default-features = false, features = ["alloc"], optional = true }
rkyv = { version = "0.8", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
serde_json = "1"
facet-json = "0.43"
rkyv = { version = "0.8", features = ["bytecheck"] }

[features]
std = ["alloc"]
alloc = []
derive = ["dep:abmac-macros"]
serde = ["dep:serde", "dep:base64", "alloc"]
facet = ["dep:facet", "dep:base64", "alloc"]
rkyv = ["dep:rkyv", "alloc"]

[[example]]
name = "derive"
required-features = ["derive", "alloc"]

[[example]]
name = "alloc"
required-features = ["alloc"]

[[example]]
name = "custom_struct"
required-features = ["derive"]

[[example]]
name = "serde_bridge"
required-features = ["derive", "serde"]

[[example]]
name = "facet_bridge"
required-features = ["derive", "facet"]

[[example]]
name = "rkyv_bridge"
required-features = ["derive", "rkyv"]
