[package]
name = "pebble"
version = "0.1.0"
edition = "2024"
description = "O(√T) checkpoint management using the Williams pebble game algorithm"
license = "MIT OR Apache-2.0"

[features]
default = ["derive"]
derive = ["dep:abmac-macros"]
std = ["spill-ring/std"]
serde = ["bytecast/serde"]
facet = ["bytecast/facet"]
rkyv = ["bytecast/rkyv"]

[dependencies]
bytecast = { path = "../bytecast", default-features = false, features = ["alloc", "derive"] }
hashbrown = "0.15"
abmac-macros = { path = "../abmac-macros", default-features = false, features = ["pebble"], optional = true }
spill-ring = { path = "../spill-ring", default-features = false }
spout = { path = "../spout" }
verdict = { path = "../verdict", default-features = false }

[[example]]
name = "basic"
required-features = ["derive", "serde"]

[[example]]
name = "files"
required-features = ["derive"]

[[example]]
name = "pebble_rebuild"

[[example]]
name = "pebble_branching"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
