[package]
name = "pebble"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "O(√T) checkpoint management using the Williams pebble game algorithm"

[features]
default = ["cold-buffer"]
bytecast = ["dep:bytecast"]
cold-buffer = ["dep:spill-ring"]
cold-buffer-std = ["cold-buffer", "spill-ring/std"]
verdict = []

[dependencies]
bytecast = { path = "../bytecast", optional = true, default-features = false, features = ["alloc", "derive"] }
hashbrown = "0.15"
spill-ring = { path = "../spill-ring", optional = true, default-features = false }
spout = { path = "../spout" }
verdict = { path = "../verdict", default-features = false }

[[example]]
name = "files"
required-features = ["cold-buffer", "bytecast"]

[[example]]
name = "pebble_rebuild"

[[example]]
name = "pebble_branching"

[dev-dependencies]
