[package]
name = "spill-ring-core"
version = "1.0.0-rc.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Core no_std ring buffer with overflow-to-sink semantics"
repository = "https://github.com/GregBowyer/spill_ring"
keywords = ["ring-buffer", "no_std", "embedded", "lock-free"]
categories = ["data-structures", "no-std", "embedded"]

[features]
default = []
std = []
no-atomics = []

[dependencies]
snafu = { version = "0.8", default-features = false, features = ["rust_1_81"] }

[dev-dependencies]
