[package]
name = "spill-ring"
version = "1.0.0-rc.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core no_std ring buffer with overflow-to-spout semantics"
documentation = "https://docs.rs/spill-ring"
readme = "README.md"
keywords = ["ring-buffer", "no_std", "embedded", "lock-free", "spout"]
categories = ["data-structures", "no-std", "embedded"]

[features]
default = []
alloc = []
std = ["alloc", "spout/std"]
verdict = ["dep:verdict"]

[dependencies]
spout = { workspace = true }
verdict = { path = "../verdict", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "single_thread"
harness = false

[[bench]]
name = "chaining"
harness = false

[[bench]]
name = "mpsc"
harness = false
required-features = ["std"]

[[example]]
name = "mpsc"
required-features = ["alloc"]

[[example]]
name = "backpressure"
required-features = ["std"]

[[example]]
name = "worker_pool"
required-features = ["std"]

[[example]]
name = "fan_in"
required-features = ["std"]

[[example]]
name = "sequenced"
required-features = ["std"]

[[example]]
name = "mergers"
required-features = ["std"]

[[example]]
name = "pipeline"
required-features = ["std"]
