[package]
name = "spout"
version = "1.0.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A minimal, composable push-based trait for sending items to a destination"
documentation = "https://docs.rs/spout"
readme = "README.md"
keywords = ["spout", "push", "no_std", "composable", "iterator"]
categories = ["no-std", "rust-patterns"]

[features]
std = ["bytecast?/std"]
bytecast = ["dep:bytecast", "dep:bytecast-macros", "bytecast/alloc"]

[dependencies]
bytecast = { workspace = true, optional = true }
bytecast-macros = { workspace = true, optional = true }

[dev-dependencies]
